--- a/myproject/accounts/Jessie/src/child_profile.html
+++ b/myproject/accounts/Jessie/src/child_profile.html
@@ -6,145 +6,151 @@
     <title>Child Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex justify-center items-center min-h-screen">
-    <div class="w-full max-w-4xl bg-white shadow-lg rounded-lg p-6">
+<body class="bg-gray-100 flex flex-col items-center min-h-screen p-4">
+
+    <!-- Child Profile Section -->
+    <div class="w-full max-w-4xl bg-white shadow-lg rounded-lg p-6 mb-6">
         <h2 class="text-2xl font-bold text-center mb-4">Child Profile</h2>
 
-        <!-- Search Bar -->
-        <div class="mb-4">
-            <input type="text" id="search" placeholder="Search..." 
-                class="w-full border p-2 rounded-md focus:ring-2 focus:ring-pink-400">
+        <!-- Profile Details -->
+        <div class="flex items-center justify-between mb-4">
+            <div class="flex items-center gap-4">
+                <img id="profilePic" src="https://via.placeholder.com/80" alt="Profile Pic" class="rounded-full w-20 h-20 border-2 border-pink-500">
+                <div>
+                    <p class="text-lg font-semibold" id="childName">John Doe</p>
+                    <p class="text-gray-600" id="childCategory">Pre-School | Age: <span id="childAge">5</span></p>
+                </div>
+            </div>
+            <div>
+                <button id="editBtn" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Edit</button>
+                <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Remove</button>
+            </div>
         </div>
 
-        <!-- Table -->
-        <div class="overflow-x-auto">
-            <table class="w-full border-collapse border border-gray-300">
-                <thead>
-                    <tr class="bg-pink-500 text-white">
-                        <th class="p-3 border border-gray-300">Profile</th>
-                        <th class="p-3 border border-gray-300">First Name</th>
-                        <th class="p-3 border border-gray-300">Last Name</th>
-                        <th class="p-3 border border-gray-300">Category</th>
-                        <th class="p-3 border border-gray-300">Age</th>
-                        <th class="p-3 border border-gray-300">Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="table-body">
-                    <tr class="bg-gray-100 text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">Grijalde</td>
-                        <td class="p-3 border border-gray-300">Kim</td>
-                        <td class="p-3 border border-gray-300">Big Boys</td>
-                        <td class="p-3 border border-gray-300">13</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                    <tr class="bg-gray-100 text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">Elmar</td>
-                        <td class="p-3 border border-gray-300">Panganiban</td>
-                        <td class="p-3 border border-gray-300">Big Boys</td>
-                        <td class="p-3 border border-gray-300">12</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                    <tr class="bg-gray-100 text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">Mark</td>
-                        <td class="p-3 border border-gray-300">Tyson</td>
-                        <td class="p-3 border border-gray-300">Big Boys</td>
-                        <td class="p-3 border border-gray-300">57</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                    <tr class="bg-gray-100 text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">John</td>
-                        <td class="p-3 border border-gray-300">Doe</td>
-                        <td class="p-3 border border-gray-300">Pre-School</td>
-                        <td class="p-3 border border-gray-300">5</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                    <tr class="text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">Jane</td>
-                        <td class="p-3 border border-gray-300">Smith</td>
-                        <td class="p-3 border border-gray-300">Nursery 2</td>
-                        <td class="p-3 border border-gray-300">4</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                    <tr class="bg-gray-100 text-center">
-                        <td class="p-3 border border-gray-300">
-                            <img src="https://via.placeholder.com/40" alt="Profile Pic" class="rounded-full w-10 h-10 mx-auto">
-                        </td>
-                        <td class="p-3 border border-gray-300">Mark</td>
-                        <td class="p-3 border border-gray-300">Lee</td>
-                        <td class="p-3 border border-gray-300">Big Boys</td>
-                        <td class="p-3 border border-gray-300">7</td>
-                        <td class="p-3 border border-gray-300 flex justify-center gap-2">
-                            <button class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600 edit-btn">Edit</button>
-                            <button class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 remove-btn">Print</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <!-- Profile Action Buttons -->
+        <div class="flex justify-center gap-4">
+            <button id="viewMedicalRecords" class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-600">
+                View Medical Records
+            </button>
         </div>
+    </div>
 
-        <!-- Back to Dashboard Button -->
-        <div class="mt-4 text-center">
-            <a href="dashboard.html" class="text-pink-500 font-bold hover:underline">Back to Dashboard</a>
+    <!-- Medical Records Section (Initially Hidden) -->
+    <div id="medicalRecords" class="hidden w-full max-w-4xl bg-white shadow-lg rounded-lg p-6 mb-6">
+        <h2 class="text-2xl font-bold text-center mb-4">Medical Records</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div class="p-4 border rounded-lg">
+                <h3 class="text-lg font-semibold">Growth Data</h3>
+                <p class="text-gray-600">Height: 110 cm | Weight: 20 kg</p>
+            </div>
+            <div class="p-4 border rounded-lg">
+                <h3 class="text-lg font-semibold">Immunizations</h3>
+                <p class="text-gray-600">Completed: DTP, Polio, MMR</p>
+            </div>
+            <div class="p-4 border rounded-lg">
+                <h3 class="text-lg font-semibold">Medical Appointments</h3>
+                <p class="text-gray-600">Last Checkup: Jan 2024</p>
+            </div>
+            <div class="p-4 border rounded-lg">
+                <h3 class="text-lg font-semibold">Illness Record</h3>
+                <p class="text-gray-600">No major illnesses</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Editable Profile Modal (Hidden by Default) -->
+    <div id="editModal" class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+            <h2 class="text-2xl font-bold text-center mb-4">Edit Profile</h2>
+
+            <!-- Profile Picture -->
+            <div class="flex flex-col items-center mb-4">
+                <label for="uploadProfilePic" class="cursor-pointer">
+                    <img id="editProfilePic" src="https://via.placeholder.com/100" alt="Profile Picture" 
+                        class="w-24 h-24 rounded-full border-2 border-pink-500 object-cover">
+                </label>
+                <input type="file" id="uploadProfilePic" accept="image/*" class="hidden">
+            </div>
+
+            <!-- Editable Form -->
+            <div class="space-y-3">
+                <div>
+                    <label class="block text-gray-600 font-semibold">First Name</label>
+                    <input type="text" id="editFirstName" class="w-full border p-2 rounded-md">
+                </div>
+
+                <div>
+                    <label class="block text-gray-600 font-semibold">Last Name</label>
+                    <input type="text" id="editLastName" class="w-full border p-2 rounded-md">
+                </div>
+
+                <div>
+                    <label class="block text-gray-600 font-semibold">Category/Group</label>
+                    <input type="text" id="editCategory" class="w-full border p-2 rounded-md">
+                </div>
+
+                <div>
+                    <label class="block text-gray-600 font-semibold">Age</label>
+                    <input type="number" id="editAge" class="w-full border p-2 rounded-md">
+                </div>
+            </div>
+
+            <!-- Buttons -->
+            <div class="mt-4 flex justify-between">
+                <button id="saveEdit" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Save</button>
+                <button id="cancelEdit" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Cancel</button>
+            </div>
         </div>
     </div>
 
     <script>
-        // Search Functionality
-        document.getElementById('search').addEventListener('input', function () {
-            let filter = this.value.toLowerCase();
-            let rows = document.querySelectorAll("#table-body tr");
-
-            rows.forEach(row => {
-                let text = row.textContent.toLowerCase();
-                row.style.display = text.includes(filter) ? "" : "none";
-            });
+        // Toggle Medical Records
+        document.getElementById("viewMedicalRecords").addEventListener("click", function () {
+            document.getElementById("medicalRecords").classList.toggle("hidden");
         });
 
-        // Remove Functionality
-        document.querySelectorAll('.remove-btn').forEach(button => {
-            button.addEventListener('click', function () {
-                if (confirm("Are you sure you want to remove this child?")) {
-                    this.closest("tr").remove();
-                }
-            });
+        // Open Edit Modal
+        document.getElementById("editBtn").addEventListener("click", function () {
+            document.getElementById("editModal").classList.remove("hidden");
+
+            // Pre-fill form with existing values
+            let fullName = document.getElementById("childName").textContent.split(" ");
+            document.getElementById("editFirstName").value = fullName[0];
+            document.getElementById("editLastName").value = fullName[1];
+            document.getElementById("editCategory").value = document.getElementById("childCategory").textContent.split("|")[0].trim();
+            document.getElementById("editAge").value = document.getElementById("childAge").textContent;
+            document.getElementById("editProfilePic").src = document.getElementById("profilePic").src;
         });
 
-        // Edit Functionality (Placeholder)
-        document.querySelectorAll('.edit-btn').forEach(button => {
-            button.addEventListener('click', function () {
-                alert("Edit function can be implemented here.");
-            });
+        // Save Changes
+        document.getElementById("saveEdit").addEventListener("click", function () {
+            let firstName = document.getElementById("editFirstName").value;
+            let lastName = document.getElementById("editLastName").value;
+            let category = document.getElementById("editCategory").value;
+            let age = document.getElementById("editAge").value;
+
+            // Update profile details
+            document.getElementById("childName").textContent = `${firstName} ${lastName}`;
+            document.getElementById("childCategory").textContent = `${category} | Age: ${age}`;
+            document.getElementById("profilePic").src = document.getElementById("editProfilePic").src;
+
+            // Close Modal
+            document.getElementById("editModal").classList.add("hidden");
+        });
+
+        // Cancel Edit
+        document.getElementById("cancelEdit").addEventListener("click", function () {
+            document.getElementById("editModal").classList.add("hidden");
+        });
+
+        // Remove Child Profile
+        document.querySelector(".remove-btn").addEventListener("click", function () {
+            if (confirm("Are you sure you want to remove this child?")) {
+                document.querySelector(".w-full.max-w-4xl").remove();
+            }
         });
     </script>
+
 </body>
 </html>
