--- a/myproject/accounts/new/medication_list.html
+++ b/myproject/accounts/new/medication_list.html
@@ -14,17 +14,14 @@
 
         <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-6">
             <input type="text" id="search" placeholder="Search by Name or ID" 
-            class="border border-pink-500 p-3 rounded-md text-black-500 w-full md:w-6/6 focus:ring-2 focus:ring-pink-400 focus:outline-none">
-            <div class="flex w-full justify-between md:justify-end gap-4">
-            <a href="{% url 'dashboard' %}" class="bg-gray-500 text-white px-6 py-3 rounded-md hover:bg-gray-600 transition text-center">
-                Back to Dashboard
-            </a>
-            <button id="addChildBtn" class="bg-pink-500 text-white px-6 py-3 rounded-md hover:bg-pink-600 transition">
-                Add New Medication
+            class="border border-pink-500 p-3 rounded-md text-pink-500 w-full md:w-3/4">
+            <button id="addChildBtn" class="bg-pink-500 text-white px-6 py-3 rounded-md hover:bg-pink-600 transition w-full md:w-auto">
+            Add New Medication
             </button>
-            </div>
+            <a href="{% url 'dashboard' %}" class="bg-gray-500 text-white px-6 py-3 rounded-md hover:bg-gray-600 transition">
+                Back to Dashboard
+                </a>
         </div>
-
         <div class="overflow-x-auto">
             <table class="w-full border-collapse border border-gray-300">
                 <thead>
@@ -185,4 +182,4 @@
         });
     </script>
 </body>
-</html>
+</html> 
